# spark-store

./: .gitignore  CMakeLists.txt  FAQ.md  FAQ.zh.md  Jenkinsfile  LICENCE-Additional  LICENSE  Makefile  README.en.md  README.md  README.zh.md  build.sh  build_and_install.sh  code-analyze.md  spark-store-project.pro  spark-store.pro  spark-store_3.0.3-7_amd64.deb  tips.md  translate_generation.sh  translate_update.sh
.gitee/: Dockerfile
.workflow/: dtk-build-commit-20220425.yml  dtk-build-release-tag-20220425.yml  dtk-build-release-tag.yml  master-pipeline.yml  pipeline-dtk-build-aarch64.yml
DOCS/: code-analyze.md  json-api-doc.md  spk-doc.md  write-preview-skeleton.md  内网部署.md
assets/: icons.qrc  spark-store.xcf
debian/: changelog  control  copyright  rules  spark-store.postinst  spark-store.postrm  spark-store.preinst  spark-store.prerm  spark-store.triggers
docs/: structure_and_naming.md  translating.md
gui/: spkabout.cpp  spkappitem.cpp  spkdialog.cpp  spkdownloadentry.cpp  spkiconbutton.cpp  spkimgviewer.cpp  spkloading.cpp  spkmainwindow.cpp  spkmsgbox.cpp  spknotifydot.cpp  spkpageuitest.cpp  spkpopup.cpp  spkqsshelper.cpp  spkstretchlayout.cpp  spktitlebar.cpp  spkui_general.cpp  spkwindow.cpp
inc/: spkabout.h  spkappitem.h  spkconfig.h  spkdialog.h  spkdownload.h  spkdownloadentry.h  spkfillwidget.h  spkfocuslineedit.h  spkiconbutton.h  spkimgviewer.h  spkloading.h  spkmainwindow.h  spknotifydot.h  spkpageuitest.h  spkqsshelper.h  spkresource.h  spkstore.h  spkstretchlayout.h  spktitlebar.h  spkui_general.h  spkutils.h  spkwindow.h
lang/: zh.ts
patchs/: README.md  zinface-community-cmake-build-system.patch
resource/: default_config  resource.qrc
src/: CMakeLists.txt  README.md  application.cpp  application.h  downloadlist.cpp  downloadworker.cpp  downloadworker.h  main.cpp  mainwindow-dtk.cpp  mainwindow-dtk.h  mainwindow-dtk.ui  spark-store.pro  spkconfig.cpp  spkdownload.cpp  spklogging.cpp  spkresource.cpp  spkstore.cpp  spkuimsg.cpp  spkutils.cpp  src.cmake  widget.cpp  widget.h  widget.ui  workerthreads.cpp  workerthreads.h
src/assets/: assets.qrc
src/assets/json/: features.json
src/assets/translations/: qtwebengine_zh.qm  qtwebengine_zh.ts
src/backend/: DataCollectorAndUploader.cpp  DataCollectorAndUploader.h  ThemeChecker.cpp  ThemeChecker.h  downloadworker.cpp  downloadworker.h  image_show.cpp  image_show.h  sparkapi.cpp  sparkapi.h
src/dbus/: dbussparkstore.cpp  dbussparkstore.h  dbussparkstoreservice.cpp  dbussparkstoreservice.h
src/pages/: appintopage.cpp  appintopage.h  appintopage.ui  applistpage.cpp  applistpage.h  applistpage.ui  settingspage.cpp  settingspage.h  settingspage.ui
src/pkgs/: spkpkgmgrapt.cpp  spkpkgmgrpacman.cpp
src/spark-dstore-patch/: spark-dstore-patch.pro  spark-dstore-tool.cpp
src/utils/: httprequest.cpp  httprequest.h  utils.cpp  utils.h  widgetanimation.cpp  widgetanimation.h
src/webengine/: webenginepage.h  webengineview.h
src/widgets/: big_image.cpp  downloadlistwidget.cpp  downloadlistwidget.h  downloadlistwidget.ui
src/widgets/base/: basewidgetopacity.cpp  basewidgetopacity.h
src/widgets/common/: downloaditem.cpp  downloaditem.h  downloaditem.ui  progressbutton.cpp  progressbutton.h  smoothlistwidget.cpp  smoothlistwidget.h  smoothscrollbar.cpp  smoothscrollbar.h  webenginepage.cpp  webenginepage.h  webengineview.cpp
tool/: aptss  btinst  copyldd.sh  (+9 more)
translations/: CMakeLists.txt  spark-store_en.ts  spark-store_es.ts  spark-store_fr.ts  spark-store_zh_CN.qm  spark-store_zh_CN.ts  spark-store_zh_TW.ts
(+82 files in other folders)
